Application/webSite/css/style.css
/* ... */
.infoContainer {
	display: grid;
    grid-template-columns: 4fr 9fr;
    grid-template-rows: 1fr;
    height: 300px;
    margin: 10px;
    transition: 0.5s;
}

.infoContainerResize {
	height: 110px;
}

.consultationInfo {
	background-color: white;
	position: relative;
	text-align: center;
	margin: 0 auto;
	margin-left: 7%;
	margin-right: 3%;
	border-radius: 10px;
	box-shadow: 1px 0px 15px 0px black;
	transition: 1s;
}

.pateientsInfo {
	background-color: white;
	position: relative;
	text-align: center;
	margin: 0 auto;
	margin-left: 5%;
	margin-right: 5%;
	border-radius: 10px;
	box-shadow: 1px 0px 15px 0px black;
	transition: 1s;
}

.doctorsNotes {
	margin-top: 30px;
	margin-bottom: 20px;
	margin-left: 3%;
	margin-right: 4%;
	padding: 15px 20px 20px 20px;
	padding-bottom: 15px;
	background-color: #003366;
	border-radius: 5px;
	min-width: 420px;
	max-height: 400px;
	box-shadow: 1px 0px 15px 0px black;
}

#saveDoctorNote {
	color: white;
}

#centerSearchBox
{
	display: grid;
	grid-template-columns: 1fr 1fr;
	grid-template-rows: 1fr 1fr;
}

#sideBarLabel {
	background-color: white;
	border-radius: 10px;
	width: 90px;
	text-align: center;
}

#bodyContainer{
	position: relative;

	margin-left: auto;
	margin-right: auto;
	width: 60%;

	transition: 0.8s;
}

.bodyContainerIncreaseWidth {
	transform: translateX(-120px);
}

#saveDoctorNote:hover {
	background-color: white;
	color: #003366;
}

.conInfoTimeCenter {
	position: relative;
	text-align: center;
	margin: 0 auto;
	transform: translate(-5px, -10px);
	font-size: 35px;
}

.conInfoTimeCenterMessage {
	position: relative;
	text-align: center;
	margin: 0 auto;
	transform: translateX(0px);
}

.renderCenter {
	position: relative;
	text-align: center;
	margin: 0 auto;
}

.arrow {
	border-radius: 20px;
	width: 30px;
	height: 30px;
	transition: 0.5s;
	background-color: white;
}

.arrow:hover {
	cursor: pointer;
}

.arrowRotate {
	transform: rotate(180deg);
}

#arrowConInfo {
	float: right;
}

#arrowPatInfo {
	float: right;
}

.arrowSideBody {
	position: relative;
	border-radius: 20px;
	width: 30px;
	height: 30px;
	transition: 0.5s;
	background-color: white;
	float: right;
	transform: translate(-10px, 10px) rotate(270deg);
}

.arrowSideBody:hover {
	cursor: pointer;
}

.arrowSideBarTransform:hover {
	cursor: pointer;
}

.arrowSideBarTransform {
	position: relative;
	border-radius: 20px;
	width: 30px;
	height: 30px;
	transition: 0.5s;
	background-color: white;
	float: right;
	transform: translate(50px, 10px) rotate(90deg);
}

#sideBarLabel:hover {
	opacity: 0.7;
	cursor: pointer;
}

#arrowSideBody:hover{
	box-shadow: 1px 0px 15px 0px lightgray;
}

.abv-txt {
	color: white;
  	width: 150px;
  	max-width: 150px;
}


#consultationInner {
	position: relative;
	text-align: left;
	margin-left: 10px;
	transform: translateY(100px);
}

.patientInfoInner {
	display: grid;
	grid-template-columns: 1fr 1fr;
	color: black;
	position: relative;
	min-width: 150px;
	text-align: left;
	padding-left: 10px;
	transform: translateY(100px);
}

.patientInfoInnerMessage {
	color: black;
	position: relative;
	text-align: left;
	margin-left: 10px;
	transform: translateY(100px);
}


/*elements*/
body{
	background-color: white;
	background-image: url("../css/images/doodle(OO).jpg");
	background-size:auto;
	background-attachment: scroll;
	position: absolute;
	width: 100%;
	height: 100%;
	z-index: 3;

}

textarea{
	width: 235px;
	padding: 5px;
	border: none;
}

h2 {
	color: white;
}

nav{
	z-index: 2;
	background-color: #003366;
	margin-left: auto;
	margin-right: auto;

}
ul{
	position: inherit;
	margin-left: auto;
	margin-right: auto;

}

a:hover {
	cursor: pointer;
}

p {
	color: white;
}



hr{
	background-color: lightgray;
}

#form {
	text-align: center;
	background-color: #003366;
	position: relative;
	height: 60%;
	margin-top: auto;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: auto;
	border-bottom-left-radius: 10px;
	border-bottom-right-radius: 10px;
	border-bottom: solid 20px lightblue;
}

image {
	width: 2em;
	height: 2em;
}

table {

	border-top: solid 3px #003366;
	text-align: center;
}

select{
	margin: 0 auto;
	text-align: center;
}

thead{
	background-color: #003366;
	right: 0;
}


th{
	color: white;
}

td{

	padding: 0px;
	color: black;
	background-color: white;
}

h1 {
	position: relative;
	text-align: center;
	margin: 0px auto;
	color: black;
}

input {
	max-width: 300px;
	text-align: center;
	margin-left: auto;
	margin-right: auto;
	position: relative;
}

/*IDs*/
#doctorFormSignup{
	background-color: #003366;
	border-radius: 5px;
}

#bookingBackground{
	background-color: lightblue;
	box-shadow: 1px 0px 15px 0px black;
}

#centerBookingOverlay{
	text-align: center;
	padding: 20px;
}

#notifyContainer{
	margin-top: 70px;
}

#containInfoRight{
	padding: 30px;

}

#buttonSchedule{
	right: 0px;
	top: 0;
	bottom: 0px;
	width: 200px;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
    position: absolute;
}

.notify{
	width: 50%;
	height: 60px;
	position: relative;
	background-color: lightgray;
	list-style-type: none;
	padding-left: 220px;
	padding-top: 15px;
	box-shadow: 0px 0px 5px 0px black;
	color: black;
	margin-top: 20px;
	border-radius: 5px;
	transition: all 0.3s ease-in-out;
	-webkit-transition: all 0.3s ease-in-out;
	-moz-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	-ms-transition: all 0.3s ease-in-out;
}

#notify:hover{
	background-color: lightgreen;
	box-shadow: 0px 0px 5px 0px black;
	color: black;
	transform: translate(5em,0);
	-webkit-transform: translate(5em,0);
	-moz-transform: translate(5em,0);
	-o-transform: translate(5em,0);
	-ms-transform: translate(5em,0);
}

#notify:visited {
	background-color: lightgreen;
}

#header{
	width: 100%;
	position: absolute;
	line-height: 50px;
	background-color: white;
}

#headerTitle{
	text-align: center;
	color: black;
	margin: auto;
}
/* ... */

